syntax = "proto3";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative ./app/grpc/proto/location/location.proto
package grpc;
option go_package= "main/app/grpc/proto/location";

service LocationService {
  rpc SetHistories (SetHistoryRequest) returns (HistoryResponse) {}
}

message SetHistoryRequest {
  repeated History histories= 1;
}

message History {
  uint64 eventId = 1;
  string name =2;
  string address = 3;
  string addressRoad =4;
  string latitude = 5;
  string longitude = 6;
}

message HistoryResponse {
  bool isSuccess = 1;
}